--- a/.gitignore
+++ b/.gitignore
@@ -69,7 +69,8 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
+# commit .env for demo purposes only
+#.env
 .env.test
 
 # parcel-bundler cache (https://parceljs.org/)
